--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "joi": "^17.12.3",
     "nodemon": "^3.1.0"
   }
 }
