--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "slugify": "^1.6.6"
-
+    "slugify": "^1.6.6",
+    "socket.io": "^4.7.5"
   }
 }
